<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Driving Range Logs</string>
    <string name="second_fragment_label">Driving Range Notes</string>
    <string name="logs_fragment_label">Shots logged</string>
    <string name="next">Notes style</string>
    <string name="previous">\>Compact</string>
    <string name="hello_first_fragment">Golfer</string>
    <string name="hello_second_fragment">Log the entry</string>
    <!-- -->
    <string name="app_name">Drange Logger</string>
    <string name="menu_item_settings">use meters</string>
    <string name="menu_item3">About</string>
    <string name="menu_item2">-\> logs</string>
    <string name="menu_item_export">backup DB</string>
    <string name="menu_item_clrlogs">clr session</string>
    <string name="powervalue_full">Full</string>
    <string name="powervalue_75" tools:ignore="TypographyFractions">3/4</string>
    <string name="powervalue_50" tools:ignore="TypographyFractions">1/2</string>
    <string name="powervalue_low">Chip</string>
    <string name="default_commentbox">Temp, loc, comments</string>
    <string name="text_yards">Yards</string>
    <string name="text_meters">meters</string>
    <string name="default_stick_14">Lw</string>
    <string name="default_stick_13">Sw</string>
    <string name="default_stick_12">Gw</string>
    <string name="default_stick_11">Pw</string>
    <string name="default_stick_10">9i</string>
    <string name="default_stick_9">8i</string>
    <string name="default_stick_8">7i</string>
    <string name="default_stick_7">6i</string>
    <string name="default_stick_6">5i</string>
    <string name="default_stick_5">4i</string>
    <string name="default_stick_4">3H</string>
    <string name="default_stick_3">2H</string>
    <string name="default_stick_2">2/3W</string>
    <string name="default_stick_1">Driver</string>
    <string name="action_text_record">Record</string>
    <string name="button_straight_0">Straight</string>
    <string name="button_straight_1">NICE</string>
    <string name="button_left_0">L\?</string>
    <string name="button_left_1">L</string>
    <string name="button_missed_0">Miss?</string>
    <string name="button_missed_1">Missed</string>
    <string name="button_right_0">R\?</string>
    <string name="button_right_1">R</string>
    <string name="text_yds">yds</string>
    <string name="text_spaceholder1" />
    <string name="large_text">
        "Choose a player and recent option, then press Query to refresh logs.\n"
    </string>
    <string name="button_export_log">Export</string>
    <string name="button_query_log">Query</string>
</resources>