<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.xluz.droidacts.drangenotes.MainActivity">
    <item
        android:id="@+id/menu_settings"
        android:checkable="true"
        android:orderInCategory="101"
        android:title="@string/menu_item_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logs"
        android:enabled="true"
        android:orderInCategory="102"
        android:title="@string/menu_item2" />
    <item
        android:id="@+id/menu_export"
        android:enabled="false"
        android:orderInCategory="103"
        android:title="@string/menu_item_export" />
    <item
        android:id="@+id/menu_clearlogs"
        android:enabled="true"
        android:orderInCategory="104"
        android:title="@string/menu_item_clrlogs" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="109"
        android:title="@string/menu_item3" />
</menu>