<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="org.xluz.droidacts.drangenotes.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first"/>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="org.xluz.droidacts.drangenotes.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/logsFragment"
        android:name="org.xluz.droidacts.drangenotes.LogsFragment"
        android:label="@string/logs_fragment_label"
        tools:layout="@layout/fragment_logs" >
        <argument android:name="msgtxt"
            app:argType="string"
            app:nullable="true" />
        <argument android:name="sesscount"
            app:argType="integer" />
        <argument android:name="sessteetime"
            app:argType="long" />
    </fragment>
    <action
        android:id="@+id/action_global_logsFragment"
        app:destination="@id/logsFragment" />
    <action
        android:id="@+id/action_global_SecondFragment"
        app:destination="@id/SecondFragment"
        app:launchSingleTop="true" />
</navigation>